# event-booking

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
src/: config.py
src/auth/: jwt_core.py  token.py  token_validator.py  tools.py
src/database/: database.py  main.py  models.py
src/database/queries/: orm.py
src/models/: input.py
src/routes/: __init__.py  auth.py  event.py
